<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MainActivity"
    android:background="@color/fundoCinza">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="20sp"
        >

<!--        Quantidade questão-->
        <TextView
            android:id="@+id/txt_label_numero_questao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_label_numero_questao"
            android:textStyle="bold"
            android:textColor="@color/txt_Cinza_standart"
            android:textSize="26sp"
            android:gravity="center"
            android:layout_marginBottom="10sp"
            />

<!--        Enunciado da questão-->
        <TextView
            android:id="@+id/txt_enunciado_questao"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:textSize="30sp"
            android:textColor="@color/txt_Cinza_standart"
            android:text="@string/txt_enunciado"
            android:layout_marginBottom="10sp"
            />

<!--        Opções de resposta-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.3"
            android:layout_marginBottom="10sp">

            <Button
                android:id="@+id/btn_opc_1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5sp"
                android:layout_weight="0.25"
                android:textColor="@color/white"
                android:backgroundTint="@color/btnVerde"
                android:text="@string/questao"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/btn_opc_2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:backgroundTint="@color/btnVerde"
                android:layout_margin="5sp"
                android:textColor="@color/white"
                android:text="@string/questao"
                app:cornerRadius="0dp"/>

            <Button
                android:id="@+id/btn_opc_3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:backgroundTint="@color/btnVerde"
                android:layout_margin="5sp"
                android:textColor="@color/white"
                android:text="@string/questao"
                app:cornerRadius="0dp"/>

            <Button
                android:id="@+id/btn_opc_4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:backgroundTint="@color/btnVerde"
                android:layout_margin="5sp"
                android:textColor="@color/white"
                android:text="@string/questao"
                app:cornerRadius="0dp"/>

        </LinearLayout>


        <Button
            android:id="@+id/btn_pular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:backgroundTint="@color/Cinza_standart"
            android:layout_margin="5sp"
            android:textColor="@color/white"
            android:text="@string/btn_pular"
            app:cornerRadius="0dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>