<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Second"
    android:background="@color/fundoCinza"
    >

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingVertical="20sp"
        >

<!--        Resumo da tentativa-->
        <TextView
            android:id="@+id/txt_resumo_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_resumo_label"
            android:textSize="@dimen/Titulos_label"
            android:textStyle="bold"
            android:textColor="@color/txt_Cinza_standart"
            android:gravity="center"
            />

        <View
            android:layout_width="380dp"
            android:layout_height="1dp"
            android:background="@color/black"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="10sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"/>
                
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/subTitulos_label"
                        android:text="@string/txt_acertos_label"
                        android:textColor="@color/txt_Cinza_standart"
                        />
                    
                    <TextView
                        android:id="@+id/int_numeroAcertos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/verde_acertos"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        />

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/subTitulos_label"
                        android:text="@string/txt_erros_label"
                        android:textColor="@color/txt_Cinza_standart"
                        />

                    <TextView
                        android:id="@+id/int_numeroErros"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/vermelho_erros"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        />

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="10sp">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"/>
                    <View
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@color/verde_acertos"/>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="0.2"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                        android:text="@string/txt_acertos_progress"
                        android:textSize="@dimen/subTitulos_label"
                        android:textColor="@color/txt_Cinza_standart"
                        />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"/>

                    <ProgressBar
                        android:id="@+id/progress_acertos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:progressBackgroundTint="@color/Cinza_standart"
                        android:progressTint="@color/verde_acertos"
                        style="?android:attr/progressBarStyleHorizontal"
                        />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"/>
                    <View
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@color/vermelho_erros"/>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="0.2"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                        android:text="@string/txt_erros_progress"
                        android:textSize="@dimen/subTitulos_label"
                        android:textColor="@color/txt_Cinza_standart"
                        />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"/>

                    <ProgressBar
                        android:id="@+id/progress_erros"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:progressBackgroundTint="@color/Cinza_standart"
                        android:progressTint="@color/vermelho_erros"
                        style="?android:attr/progressBarStyleHorizontal"
                        />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"/>
                    <View
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@color/azul_pulados"/>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="0.2"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                        android:text="@string/txt_pulados_progress"
                        android:textSize="@dimen/subTitulos_label"
                        android:textColor="@color/txt_Cinza_standart"
                        />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"/>

                    <ProgressBar
                        android:id="@+id/progress_pulados"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:progressBackgroundTint="@color/Cinza_standart"
                        android:progressTint="@color/azul_pulados"
                        style="?android:attr/progressBarStyleHorizontal"
                        />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"/>
                </LinearLayout>



            </LinearLayout>
            
        </LinearLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>